fix: fix CSS issue where component_text_area vertical-align of images are displayed incorrectly

--- a/core/component_text_area/css/component_text_area.less
+++ b/core/component_text_area/css/component_text_area.less
@@ -225,7 +225,6 @@
 
 
 	&.list {
-
 		overflow: hidden;
 
 		>.content_data {
@@ -235,6 +234,7 @@
 
 		img {
 			height: 0.9rem;
+			vertical-align: bottom;
 		}
 	}
 
